# example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
.github/workflows/: cmake.yml
src/: main.cpp  utils_math.cpp  utils_math.hpp
tests/: CMakeLists.txt  example_lib_test.cpp
